--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>단타 주식 연습</title>
   <link rel="stylesheet" href="https://unpkg.com/98.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <link rel="stylesheet" href="/QuickTradePractice/css/style.css">
-  <link rel="stylesheet" href="/css/style.css">
+
+  <link rel="stylesheet" href="/CSS/style.css">
   <style>
    
   </style>
