--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://unpkg.com/98.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-  <link rel="stylesheet" href="https://ryan101k.github.io/QuickTradePractice/css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <style>
    
   </style>
