--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>단타 주식 연습</title>
-  <link rel="stylesheet" href="https://ryan101k.github.io/QuickTradePractice/css/style.css">
+  <link rel="stylesheet" href=https://ryan101k.github.io/QuickTradePractice/css/style.css">
   <link rel="stylesheet" href="https://unpkg.com/98.css">
-
 </head>
 <body>
 
@@ -16,34 +15,51 @@
       </div>
   
       <div class="main-content">
-        <div class="stock-list-window window">
-          <div class="title-bar">
-            <div class="title-bar-text">현재 주식 목록</div>
+        <!-- Left Column: Stock List, Company Issue, and Owned Stocks -->
+        <div class="left-column">
+          <div class="stock-list-window window">
+            <div class="title-bar">
+              <div class="title-bar-text">현재 주식 목록</div>
+            </div>
+            <div class="window-body">
+              <ul id="stock-list">
+                <!-- 주식 목록을 여기에 동적으로 추가 -->
+              </ul>
+            </div>
           </div>
-          <div class="window-body">
-            <ul id="stock-list">
-              <!-- 주식 목록을 여기에 동적으로 추가 -->
-            </ul>
+
+          <div class="stock-list-issue window">
+            <div class="title-bar">
+              <div class="title-bar-text">회사 이슈</div>
+            </div>
+            <div class="window-body">
+              <ul id="stock-issue">
+                <!-- 주식 이슈를 동적으로 추가 -->
+              </ul>
+            </div>
+          </div>
+
+          <div class="owned-stocks window">
+            <div class="title-bar">
+              <div class="title-bar-text">보유한 주식</div>
+            </div>
+            <div class="window-body">
+              <ul id="owned-stocks-list">
+                <!-- 보유한 주식 목록을 여기에 동적으로 추가 -->
+              </ul>
+            </div>
           </div>
         </div>
-  
-        <div class="owned-stocks window">
-          <div class="title-bar">
-            <div class="title-bar-text">보유한 주식</div>
-          </div>
-          <div class="window-body">
-            <ul id="owned-stocks-list">
-              <!-- 보유한 주식 목록을 여기에 동적으로 추가 -->
-            </ul>
+        
+        <!-- Right Column: Stock Chart -->
+        <div class="right-column">
+          <div id="chart-container" class="window">
+            <canvas id="stock-chart"></canvas>
           </div>
         </div>
       </div>
-  
-      <div id="chart-container">
-        <canvas id="stock-chart"></canvas>
-      </div>
 
-
+      <!-- Capital and Trading Section -->
       <div class="capital">
         자본금: <span id="capital">10,000,000</span> 원
       </div>
@@ -62,14 +78,13 @@
         </div>
       </div>
 
+      <!-- Controls Section -->
       <div class="controls">
-    
         <button id="save-button">저장</button>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="js/index.js"></script>
 </body>
 </html>
-
-
