--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>단타 주식 연습</title>
-  <link rel="stylesheet" href=https://ryan101k.github.io/QuickTradePractice/css/style.css">
+  <link rel="stylesheet" href="https://ryan101k.github.io/QuickTradePractice/css/style.css">
   <link rel="stylesheet" href="https://unpkg.com/98.css">
 </head>
 <body>
