--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
   <div class="main-window window">
       <div class="title-bar">
-        <div class="title-bar-text">연습을 위해 1분봉이 아닌 5초봉으로 5초마다 값이 변합니다</div>
+        <div class="title-bar-text">연습을 위해 1분봉이 아닌 3초봉으로 3초마다 값이 변합니다</div>
       </div>
   
       <div class="main-content">
-        <!-- Left Column: Stock List, Company Issue, and Owned Stocks -->
+        <!-- 횐쪽 프로그램들 주가목록 회사이슈 보유주식들 30% 차지하게 -->
         <div class="left-column">
           <div class="stock-list-window window">
             <div class="title-bar">
@@ -59,7 +59,7 @@
         </div>
       </div>
 
-      <!-- Capital and Trading Section -->
+      <!-- 주가 조작 영역 매도 매수버튼 동적으로 가격조절 -->
       <div class="capital">
         자본금: <span id="capital">10,000,000</span> 원
       </div>
@@ -78,7 +78,7 @@
         </div>
       </div>
 
-      <!-- Controls Section -->
+      <!-- 저장버튼 영역 추후기능추가 예정-->
       <div class="controls">
         <button id="save-button">저장</button>
       </div>
