변수명 변경
수정에 용이하게 변수명과 바꾸고 주석을 추가했습니다

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
         <!-- 매수 섹션 -->
         <div class="trade-input">
           <span class="cost-info" id="cost-info">비용: 0 원</span>
-          매수량: <input type="number" id="quantity" value="1" min="1">
+          매수량: <input type="number" id="quantity-buy" value="1" min="1">
           <button id="buy-button">매수</button>
+          <button id="buy-max">MAX</button>
         </div>
       </div>
     </div>
@@ -63,8 +64,9 @@
         <!-- 매도 섹션 -->
         <div class="trade-input">
           <span class="cost-info" id="cost-info-sell">수익: 0 원</span>
-          매도량: <input type="number" id="quantity2" value="1" min="1">
+          매도량: <input type="number" id="quantity-sell" value="1" min="1">
           <button id="sell-button">매도</button>
+          <button id="buy-sell">MAX</button>
         </div>
       </div>
     </div>
