--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="main-window window">
     <!-- 타이틀 바 -->
     <div class="title-bar">
-      <div class="title-bar-text">연습을 위해 1분봉이 아닌 3초봉으로 3초마다 값이 변합니다</div>
+      <div class="title-bar-text">연습을 위해 1분봉이 아닌 6초봉으로 6초마다 값이 변합니다</div>
     </div>
 
     <!-- 메인 컨텐츠 -->
@@ -73,7 +73,9 @@
 
     <!-- 저장 버튼 -->
     <div class="controls">
-      <button id="save-button">저장</button>
+      <div class="trade">
+        <button id="save-button">저장</button>
+      </div>
     </div>
 
     <!-- 설명 섹션 -->
