회사에 변동폭조정
기업들마다 규모를 설정했습니다

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
           1. 저장 시 클립보드에 URL이 복사되며 링크에 값이 저장됩니다.<br>
           2. 회사 이슈에서 나온 이슈는 즉시 반영되지 않고 그다음에 부여됩니다 (추후 랜덤 적용 예정).<br>
           3. 주식가격의 변동값은 기존값에서 ±30%와 이슈들의 합으로 반영됩니다.<br>
+          4. 회사의 규모에 따라 이슈의 대한 영향과 변동폭이 다릅니다
           <br>
           제작: ryan101k
         </p>
